RIA-4474 Enabled Fortify scan for nightly build