@@ -117,6 +117,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
   classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
   maxWarnings = 0
   toolVersion = '8.29'
@@ -215,7 +221,7 @@ repositories {
   jcenter()
   mavenCentral()
   maven {
-    url "https://dl.bintray.com/hmcts/hmcts-maven"
+    url 'https://www.jitpack.io'
   }
 }
 
@@ -303,6 +309,8 @@ dependencies {
     exclude group: "com.vaadin.external.google", module: "android-json"
   }
   testCompile "ru.lanwen.wiremock:wiremock-junit5:1.3.1"
+
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
 
 
   testImplementation group: 'org.springframework.security', name: 'spring-security-test'
